# cppunit

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md
include/cppunit/: assert.hpp  function.hpp  report.hpp  result.hpp  result_err.hpp  result_ok.hpp  scanner.hpp  suite.hpp  suite_descriptor.hpp
src/: CMakeLists.txt  Makefile
src/cppunit/: CMakeLists.txt  assert.cpp  function.cpp  report.cpp  result.cpp  result_err.cpp  result_ok.cpp  scanner.cpp  suite.cpp  suite_descriptor.cpp
src/cppunit-cli/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/cppunit/: CMakeLists.txt  assert_custom_message.cpp  assert_equal_not_equal.cpp  assert_fail.cpp  assert_true_false.cpp
